Fix additional trivial deprecation warnings #34